fixed collapsed navbar coloring

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,3 +12,6 @@
 .nav-link {
     color: white!important;
 }
+.navbar-toggler {
+    background-color:darkgrey!important;
+}
